<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.com.eleinco.tutorialbd.MainActivity">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"/>

    <EditText
        android:id="@+id/etLatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitud"/>

    <EditText
        android:id="@+id/etLongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitud"/>

    <EditText
        android:id="@+id/etID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ID"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/rdTipo">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vehiculo"
            android:id="@+id/rbVehiculo"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Persona"
            android:id="@+id/rbPersona"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bIngresar"
            android:text="@string/ingresar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="ingresar"/>

        <Button
            android:id="@+id/bConsultarNombre"
            android:text="@string/ConNombre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="consultarNombre"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bConsultarID"
            android:text="@string/ConID"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="consultarid"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eliminar"
            android:onClick="eliminar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvID"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNombre"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLatitud"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLongitud"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTipo"/>

    </LinearLayout>

</LinearLayout>
